# phoebe-shelves-clt

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
code/: configs.conf  core.py  data_access.py  data_management.py  data_view.py
owl-shelves-clt/: config_api.py  core.py  data_management.py  data_view.py
owl_shelves_clt/: __main__.py  arg_parsing.py  config_utils.py  core.py  data_management.py  data_view.py  database_creation.py  input_utilities.py  input_utils.py  utilities.py  utils_config.py  utils_input.py
owl_shelves_clt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
owl_shelves_clt/modules/: configure.py  initialization.py  initialize.py  manage.py  view.py
owl_shelves_clt/utils/: arg_parsing.py  config.py  input.py  inputs.py
phoebe-shelves-clt/: config.cfg  main.py
phoebe-shelves-clt/modules/: initialize.py  manage.py  view.py
phoebe-shelves-clt/utils/: sql_interface.py
phoebe_shelves_clt/modules/: manage.py  view.py
phoebeshelvesclt/utils/: inputs.py
src/phoebe_shelves_clt/: configure.py  initialize.py  main.py  manage.py  view.py
src/phoebe_shelves_clt/csv_backend/: manage_csv.py  view_csv.py
src/phoebe_shelves_clt/sql/: manage_sql.py  view_sql.py
src/phoebe_shelves_clt/sql_backend/: manage_sql.py  queries.py  view_sql.py
src/phoebe_shelves_clt/sql_backend/sql_queries/: add_author.sql  author_filter.sql  create_authors_table.sql  create_books_authors_table.sql  create_books_genres_table.sql  (+15 more)
src/phoebe_shelves_clt/utils/: arg_parsing.py  data_model.py  data_processing.py  inputs.py  sql_api.py
