[metadata]
name = phoebe-shelves-clt
version = 0.0.2
author = Anthony Agbay
author_email = aj.agbay@gmail.com

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.8
install_requires = 
	matplotlib >= 3.3
	numpy >= 1.19
	pandas >= 1.2
	tabulate >= 0.8.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	phoebeshelves = phoebe_shelves_clt.main:cli_entry_point
